Added save options

--- a/autoencoder/play_audio.ipynb
+++ b/autoencoder/play_audio.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import numpy as np\n",
     "import IPython.display as ipd\n",
-    "\n",
+    "from scipy.io.wavfile import write\n",
+    "import os\n",
     "def play_audio(audio, rate=44100, save_fname=None):\n",
     "    ipd.display(ipd.Audio(audio, rate=rate))\n",
     "    if save_fname is not None:\n",
@@ -21,14 +22,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(50):\n",
-    "    print(\"Original \"+str(i))\n",
-    "    audio = np.load(\"audio_out/\"+str(i)+\"_original.npy\")\n",
-    "    play_audio(audio)    \n",
+    "for i in range(20):\n",
+    "    print(\"Random \"+str(i))\n",
+    "    audio = np.load(\"../xp/random/\"+str(i)+\".npy\")\n",
+    "    play_audio(audio)   \n",
     "    \n",
-    "    print(\"Reconstructed \"+str(i))\n",
-    "    audio = np.load(\"audio_out/\"+str(i)+\"_reconstr.npy\")\n",
-    "    play_audio(audio)"
+    "    print(\"VAE \"+str(i))\n",
+    "    audio = np.load(\"../xp/VAE/\"+str(i)+\".npy\")\n",
+    "    play_audio(audio) \n",
+    "    \n",
+    "    print(\"real \"+str(i))\n",
+    "    audio = np.load(\"../xp/real/\"+str(i)+\".npy\")\n",
+    "    play_audio(audio)   \n",
+    "    "
    ]
   },
   {
@@ -36,26 +42,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(40):\n",
+    "    print(\"random \"+str(i))\n",
+    "    audio = np.load(\"../xp/random/\"+str(i)+\".npy\")\n",
+    "    audio = np.asarray(audio,dtype=np.float32)\n",
+    "    write('../xp/random/wav/'+str(i)+'.mp3',44100,audio)\n",
+    "    \n",
+    "    print(\"VAE \"+str(i))\n",
+    "    audio = np.load(\"../xp/VAE/\"+str(i)+\".npy\")\n",
+    "    audio = np.asarray(audio,dtype=np.float32)\n",
+    "    write('../xp/VAE/wav/'+str(i)+'.mp3',44100,audio)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(80):\n",
+    "    print(\"real \"+str(i))\n",
+    "    audio = np.load(\"../xp/real/\"+str(i)+\".npy\")\n",
+    "    audio = np.asarray(audio,dtype=np.float32)\n",
+    "    write('../xp/real/wav/'+str(i)+'.mp3',44100,audio)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python ANMC",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "anmc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.17"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
