Added recent discriminability-results

--- a/ExperimentDataAnalysis/discriminability_results/results_experiment.ipynb
+++ b/ExperimentDataAnalysis/discriminability_results/results_experiment.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,42 +33,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vae['accuracy_per_question'] = vae['real']/(vae['real']+vae['vae'])\n",
+    "random['accuracy_per_question'] = random['real']/(random['real']+random['random'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy real over VAE:  0.5287356321839081\n",
-      "Accuracy real over random:  0.7065868263473054\n"
+      "Accuracy real over VAE:  0.5211904761904763\n",
+      "Accuracy real over random:  0.6881802721088437\n"
      ]
     }
    ],
    "source": [
-    "accuracy_real_vs_vae = vae['real'].sum()/(vae['real'].sum()+vae['vae'].sum())\n",
-    "accuracy_real_vs_random = random['real'].sum()/(random['real'].sum()\n",
-    "                                                +random['random'].sum())\n",
-    "\n",
-    "print('Accuracy real over VAE: ', accuracy_real_vs_vae)\n",
-    "print('Accuracy real over random: ', accuracy_real_vs_random)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Standard deviation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vae['accuracy_per_question'] = vae['real']/(vae['real']+vae['vae'])\n",
-    "random['accuracy_per_question'] = random['real']/(random['real']+random['random'])"
+    "mean_accuracy_question_real_vs_vae = vae['accuracy_per_question'].mean()\n",
+    "mean_accuracy_question_real_vs_random = random['accuracy_per_question'].mean()\n",
+    "print('Accuracy real over VAE: ', mean_accuracy_question_real_vs_vae)\n",
+    "print('Accuracy real over random: ', mean_accuracy_question_real_vs_random)"
    ]
   },
   {
@@ -154,6 +145,13 @@
     "ax.set_title('Accuracies of correctly identified human designed sounds')\n",
     "ax.errorbar([0,1], y, xerr = [0,0], yerr = [vae_std,random_std], fmt='ro',markersize=8, capsize=20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
